--- a/src/schemas/classgroup_element.yaml
+++ b/src/schemas/classgroup_element.yaml
@@ -1,5 +1,9 @@
 ﻿classgroup_element:
   type: object
+  description:
+    Represents a classgroup element (a,b,c) where a, b, and c are 512 bit signed integers. However this is using
+    a compressed representation. VDF outputs are a single classgroup element. VDF proofs can also be one classgroup
+    element(or multiple).
   properties:
     data:
       type: string
