--- a/src/schemas/vdf_info.yaml
+++ b/src/schemas/vdf_info.yaml
@@ -1,5 +1,6 @@
-﻿v_d_f_info:
+﻿vdf_info:
   type: object
+  description: Used to generate the discriminant (VDF group)
   properties:
     challenge:
       type: string
