--- a/src/requestBodies/wallet_id.yaml
+++ b/src/requestBodies/wallet_id.yaml
@@ -5,6 +5,8 @@ wallet_id:
     application/json:
       schema:
         type: object
+        required:
+          - wallet_id
         properties:
           wallet_id:
             type: integer
